--- a/Day3Demos/Day3Demos.csproj
+++ b/Day3Demos/Day3Demos.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Demo01Variables\Demo1VariableDeclaration.cs" />
     <Compile Include="Demo02Literals\Demo02EscapeSequence.cs" />
+    <Compile Include="Demo02Literals\Demo03String.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
